# laterfeed

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  justfile  openapi.json
.github/workflows/: release.yaml
.sqlx/: query-336ec886c4804819060ce96e70ab8176291f2a25c2248f1afa2f8d5df27768bd.json  query-38070acd4abe7514655eb77c3a188e1c5a26e3da0c722d89efa623b4c86a68d7.json  query-3e39288a5d0734d1649b901e4e7b4ebcedc4988ba05c00c5f326bcc2d4d8364a.json  query-4897e9d0260eaf336621c938d501abc9c2a403c4809bc7d7d36837b6ef144fad.json  query-592ac15994fbbc2dfb19ae7addbcfecfef375127a6bdcf8474968350595ac655.json  query-73715862ca11aebea8bdcb82364fa91829e82829dbe36bc91669cf1f3cab7f39.json  query-7de39c97e4e1d168e8f2b2450d1c64f42368bc8349e6a620c939db274de6a7d2.json  query-ef2b15d9502dd6f69522e2f442edb2058ddef6c950ffa0270977df88a0578282.json  query-f26d9cdce2a6f650403e2c460ed867380f1198c1e2c7d70750c9c89b6b35ce5c.json
extension/chrome/: PRIVACY.md  manifest.json  options.html  options.js  popup.html  popup.js  styles.css
extension/firefox/: PRIVACY.md  manifest.json  options.html  options.js  popup.html  popup.js  styles.css
migrations/: 20260208173619_create_entries.sql
scripts/: release-extension.sh  release.sh
src/: auth.rs  cleanup.rs  config.rs  dto.rs  errors.rs  feed.rs  handlers.rs  lib.rs  main.rs  metadata.rs  models.rs
tests/: integration.rs
