[package]
name = "laterfeed"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
atom_syndication = "0.12.7"
axum = "0.8.8"
axum-valid = { version = "0.24.0", features = ["into_json"] }
chrono = { version = "0.4.43", features = ["serde"] }
envy = "0.4.2"
reqwest = "0.13.2"
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["chrono", "runtime-tokio", "sqlite", "macros"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono"] }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
validator = { version = "0.20.0", features = ["derive"] }
